Fix Alignement issue

--- a/src/layout/styles.scss
+++ b/src/layout/styles.scss
@@ -2,12 +2,14 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  width: 100%;
   position: relative;
 
   .main-content {
     flex: 1;
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
 }
 
